--- a/src/picker/container/Container.module.scss
+++ b/src/picker/container/Container.module.scss
@@ -1,5 +1,7 @@
 .container {
   display: inline-block;
+  background-color: white;
+  color: black;
   border: 1px solid black;
   border-radius: 5px;
   padding: 0.3rem;
